--- a/README.rdoc
+++ b/README.rdoc
@@ -11,6 +11,7 @@ Things you may want to cover:
 
 * Configuration
 
+
 * Database creation
 
 * Database initialization
@@ -22,7 +23,7 @@ Things you may want to cover:
 * Deployment instructions
 
 * ...
-
+changed in remote
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
